--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <header id="home">
         <h1>Welcome to My Portfolio</h1>
         <p>HR & Business Analyst | Data-Driven Decision Maker</p>
-        <img src="profile.png" alt="Profile Photo" class="profile-photo">
+        <img src="profile.jpg" alt="Profile Photo" class="profile-photo">
     </header>
 
     <section id="about">
